@@ -1,0 +1,13 @@
+config_version	1.2
+snapshot_root	/tmp
+cmd_rsync		/usr/bin/rsync
+interval		hourly	6
+backup_exec		ls -ld /* | grep "/u"
+backup_exec		echo "hello world!"
+backup_exec		echo 'hello world!'
+backup_exec		/bin/true
+backup_exec		/bin/true		optional
+backup_exec		/bin/true		required
+backup_exec		/bin/false
+backup_exec		/bin/false	optional
+backup_exec		/bin/false	required
