@@ -3,3 +3,6 @@ snapshot_root	@CWD@/t/support/snapshots/
 cmd_rsync		@RSYNC@
 interval		hourly	6
 backup			@CWD@/t/support/files/a/	localhost/
+backup_exec		/bin/true
+backup_exec		/bin/true		optional
+backup_exec		/bin/true		required
